--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
           </div>
           <div class="col-xl-2 col-lg-3 col-md-4 d-flex align-items-center justify-content-center">
             <div class="logo text-center" style="font-size: 34px; letter-spacing: .3rem; font-weight: 300;">
-              || LOGO 
+             || Drexel 
             </div>
           </div>
           <div class="col-xl-5 col-lg-4 col-md-8 d-flex align-items-center justify-content-end">
