--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <!-- Place favicon.ico in the root directory -->
 
   <!-- all css here -->
-  <link rel="stylesheet" href="css/owl.carousel.min.css">
+      <link rel="stylesheet" href="css/owl.carousel.min.css">
       <link rel="stylesheet" href="css/bootstrap.min.css">
       <link rel="stylesheet" href="css/fontawesome-all.min.css">
       <link rel="stylesheet" href="css/default.css">
@@ -30,89 +30,34 @@
             <div class="main-menu">
               <nav>
                 <ul>
-                  <li><a href="#">Home <i class="fas fa-angle-down"></i></a>
-                    <ul class="submenu">
-                      <li><a href="#">Home style 1</a></li>
-                      <li><a href="#">Home style 2</a>
-                        <ul class="submenu">
-                          <li><a href="#">Home style 1</a></li>
-                          <li><a href="#">Home style 2</a></li>
-                          <li><a href="#">Home style 3</a>
-                            <ul class="submenu">
-                              <li><a href="#">Home style 1</a></li>
-                              <li><a href="#">Home style 2</a></li>
-                              <li><a href="#">Home style 3</a></li>
-                              <li><a href="#">Home style 4</a></li>
-                              <li><a href="#">Home style 5</a></li>
-                            </ul>
-                          </li>
-                          <li><a href="#">Home style 4</a></li>
-                          <li><a href="#">Home style 5</a></li>
-                        </ul>
-                      </li>
-                      <li><a href="#">Home style 3</a></li>
-                      <li><a href="#">Home style 4</a></li>
-                      <li><a href="#">Home style 5</a></li>
-                    </ul>
-                  </li>
-                  <li><a href="#">Feature <i class="fas fa-angle-down"></i></a>
+                  <li><a href="index.html">Home <i class="fas fa-angle-down"></i></a></li>
+                  <li><a href="feature.html">Feature <i class="fas fa-angle-down"></i></a>
                     <div class="mega-menu">
                       <ul>
                         <li class="mega-title"><a href="#">Mega Title</a></li>
-                        <li><a href="#">Full width</a></li>
-                        <li><a href="#">Full width</a></li>
-                        <li><a href="#">Full width</a></li>
-                        <li><a href="#">Full width</a></li>
+                        <li><a href="#">Coming Soon</a></li>
+                        <li><a href="#">Coming Soon</a></li>
+                        <li><a href="#">Coming Soon</a></li>
+                        <li><a href="#">Coming Soon</a></li>
                       </ul>
                       <ul>
                         <li class="mega-title"><a href="#">Mega Title</a></li>
-                        <li><a href="#">Full width</a></li>
-                        <li><a href="#">Full width</a></li>
-                        <li><a href="#">Full width</a></li>
-                        <li><a href="#">Full width</a></li>
+                        <li><a href="#">Coming Soon</a></li>
+                        <li><a href="#">Coming Soon</a></li>
+                        <li><a href="#">Coming Soon</a></li>
+                        <li><a href="#">Coming Soon</a></li>
                       </ul>
                       <ul>
                         <li class="mega-title"><a href="#">Mega Title</a></li>
-                        <li><a href="#">Full width</a></li>
-                        <li><a href="#">Full width</a></li>
-                        <li><a href="#">Full width</a></li>
-                        <li><a href="#">Full width</a></li>
+                        <li><a href="#">Coming Soon</a></li>
+                        <li><a href="#">Coming Soon</a></li>
+                        <li><a href="#">Coming Soon</a></li>
+                        <li><a href="#">Coming Soon</a></li>
                       </ul>
                     </div>
                   </li>
-                  <li class="static"><a href="#">Blogs</a>
-                    <div class="mega-menu mega-full">
-                      <ul>
-                        <li class="mega-title"><a href="#">Mega Title</a></li>
-                        <li><a href="#">Full width</a></li>
-                        <li><a href="#">Full width</a></li>
-                        <li><a href="#">Full width</a></li>
-                        <li><a href="#">Full width</a></li>
-                      </ul>
-                      <ul>
-                        <li class="mega-title"><a href="#">Mega Title</a></li>
-                        <li><a href="#">Full width</a></li>
-                        <li><a href="#">Full width</a></li>
-                        <li><a href="#">Full width</a></li>
-                        <li><a href="#">Full width</a></li>
-                      </ul>
-                      <ul>
-                        <li class="mega-title"><a href="#">Mega Title</a></li>
-                        <li><a href="#">Full width</a></li>
-                        <li><a href="#">Full width</a></li>
-                        <li><a href="#">Full width</a></li>
-                        <li><a href="#">Full width</a></li>
-                      </ul>
-                      <ul>
-                        <li class="mega-title"><a href="#">Mega Title</a></li>
-                        <li><a href="#">Full width</a></li>
-                        <li><a href="#">Full width</a></li>
-                        <li><a href="#">Full width</a></li>
-                        <li><a href="#">Full width</a></li>
-                      </ul>
-                    </div>
-                  </li>
-                  <li><a href="#">About Us</a></li>
+                  <li class="static"><a href="blogs.html">Blogs</a></li>
+                  <li><a href="about.html">About Us</a></li>
                 </ul>
               </nav>
             </div>
