--- a/about.html
+++ b/about.html
@@ -243,7 +243,7 @@
     <h3>About Us.</h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse lectus nulla, semper vel nunc nec, fringilla semper purus. </p>
     <p>Vivamus accumsan velit mauris, et tincidunt ligula feugiat vel. Integer ut lacus non risus rutrum consequat id hendrerit lorem. Sed eget tortor sit amet augue tincidunt feugiat. Phasellus sollicitudin tellus nec sapien eleifend rutrum. Etiam feugiat nisi purus, commodo ultrices dui euismod at. Curabitur dolor enim, fermentum in blandit et, pharetra et magna.</p>
-    <p>Ut tincidunt maximus turpis, nec facilisis augue elementum quis. Donec tempor purus nec magna sollicitudin tincidunt. Proin tristique, libero ac iaculis dictum, erat sem mattis augue, non sollicitudin arcu nulla ac justo. Aliquam commodo massa eget neque iaculis, quis consequat enim faucibus.</p>
+    <p>Ut tincidunt maximus turpis, nec facilisis augue elementum quis. Donec tempor purus nec magna sollicitudin tincidunt. Proin tristique, libero ac iaculis dictum, erat sem mattis augue, non sollicitudin arcu nulla ac justo. Aliquam commodo massa eget neque iaculis, quis consequat enim faucibus. Aliquam est massa, volutpat ut ante non, gravida finibus ex. Praesent lacinia massa vel dolor pellentesque, vitae dignissim justo ullamcorper. Suspendisse orci nisl, vulputate quis sollicitudin vitae, congue sed nisi. Aliquam in nulla nec sapien rhoncus mollis in non turpis. Phasellus aliquet pellentesque ante, quis euismod est dapibus convallis. Nulla vitae dignissim augue.</p>
  </div>
  
   <!-- subscription area -->
