Add margin class to about.html

--- a/about.html
+++ b/about.html
@@ -239,7 +239,7 @@
   </header>
 
  <!-- about company text --> 
- <div class="container">
+ <div class="container mt-4 mb-4">
     <h3>About Us.</h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse lectus nulla, semper vel nunc nec, fringilla semper purus. </p>
     <p>Vivamus accumsan velit mauris, et tincidunt ligula feugiat vel. Integer ut lacus non risus rutrum consequat id hendrerit lorem. Sed eget tortor sit amet augue tincidunt feugiat. Phasellus sollicitudin tellus nec sapien eleifend rutrum. Etiam feugiat nisi purus, commodo ultrices dui euismod at. Curabitur dolor enim, fermentum in blandit et, pharetra et magna.</p>
