--- a/index.html
+++ b/index.html
@@ -30,25 +30,25 @@
             <div class="main-menu">
               <nav>
                 <ul>
-                  <li><a href="index.html">Home <i class="fas fa-angle-down"></i></a></li>
+                  <li><a href="index.html">Home</a></li>
                   <li><a href="feature.html">Feature <i class="fas fa-angle-down"></i></a>
                     <div class="mega-menu">
                       <ul>
-                        <li class="mega-title"><a href="#">Mega Title</a></li>
+                        <li class="mega-title"><a href="#">Kitchen Supplies</a></li>
                         <li><a href="#">Coming Soon</a></li>
                         <li><a href="#">Coming Soon</a></li>
                         <li><a href="#">Coming Soon</a></li>
                         <li><a href="#">Coming Soon</a></li>
                       </ul>
                       <ul>
-                        <li class="mega-title"><a href="#">Mega Title</a></li>
+                        <li class="mega-title"><a href="#">Homeware</a></li>
                         <li><a href="#">Coming Soon</a></li>
                         <li><a href="#">Coming Soon</a></li>
                         <li><a href="#">Coming Soon</a></li>
                         <li><a href="#">Coming Soon</a></li>
                       </ul>
                       <ul>
-                        <li class="mega-title"><a href="#">Mega Title</a></li>
+                        <li class="mega-title"><a href="#">Accessories</a></li>
                         <li><a href="#">Coming Soon</a></li>
                         <li><a href="#">Coming Soon</a></li>
                         <li><a href="#">Coming Soon</a></li>
