--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               <nav>
                 <ul>
                   <li><a href="index.html">Home</a></li>
-                  <li><a href="feature.html">Feature <i class="fas fa-angle-down"></i></a>
+                  <li><a href="feature.html">Features <i class="fas fa-angle-down"></i></a>
                     <div class="mega-menu">
                       <ul>
                         <li class="mega-title"><a href="#">Kitchen Supplies</a></li>
