Update banner area in index.html

--- a/index.html
+++ b/index.html
@@ -65,88 +65,36 @@
               <nav id="mobile-menu">
                 <li>
                   <ul><!-- home nav -->
-                    <li><a href="#">Home <i class="fas fa-angle-down"></i></a>
-                      <ul class="submenu">
-                        <li><a href="#">Home style 1</a></li>
-                        <li><a href="#">Home style 2</a>
-                          <ul class="submenu">
-                            <li><a href="#">Home style 1</a></li>
-                            <li><a href="#">Home style 2</a></li>
-                            <li><a href="#">Home style 3</a>
-                              <ul class="submenu">
-                                <li><a href="#">Home style 1</a></li>
-                                <li><a href="#">Home style 2</a></li>
-                                <li><a href="#">Home style 3</a></li>
-                                <li><a href="#">Home style 4</a></li>
-                                <li><a href="#">Home style 5</a></li>
-                              </ul>
-                            </li>
-                            <li><a href="#">Home style 4</a></li>
-                            <li><a href="#">Home style 5</a></li>
-                          </ul>
-                        </li>
-                        <li><a href="#">Home style 3</a></li>
-                        <li><a href="#">Home style 4</a></li>
-                        <li><a href="#">Home style 5</a></li>
-                      </ul>
-                    </li><!-- features nav -->
-                    <li><a href="#">Feature <i class="fas fa-angle-down"></i></a>
-                      <ul class="submenu">
-                        <li class="mega-title"><a href="#">Mega Title</a></li>
-                        <li><a href="#">Full width</a></li>
-                        <li><a href="#">Full width</a></li>
-                        <li><a href="#">Full width</a></li>
-                        <li><a href="#">Full width</a></li>
-                        <li class="features-2"><a href="#">Features 2</a>
-                          <ul class="submenu">
-                            <li class="mega-title"><a href="#">Mega Title</a></li>
-                            <li><a href="#">Full width</a></li>
-                            <li><a href="#">Full width</a></li>
-                            <li><a href="#">Full width</a></li>
-                            <li><a href="#">Full width</a></li>
-                          </ul>
-                        </li>
-                      </ul>
+                    <li><a href="index.html">Home</a></li><!-- features nav -->
+                    <li><a href="feature.html">Feature <i class="fas fa-angle-down"></i></a>
+                      <div class="submenu">
+                        <ul>
+                          <li class="mega-title"><a href="#">Kitchen Supplies</a></li>
+                          <li><a href="#">Coming Soon</a></li>
+                          <li><a href="#">Coming Soon</a></li>
+                          <li><a href="#">Coming Soon</a></li>
+                          <li><a href="#">Coming Soon</a></li>
+                        </ul>
+                        <ul>
+                          <li class="mega-title"><a href="#">Homeware</a></li>
+                          <li><a href="#">Coming Soon</a></li>
+                          <li><a href="#">Coming Soon</a></li>
+                          <li><a href="#">Coming Soon</a></li>
+                          <li><a href="#">Coming Soon</a></li>
+                        </ul>
+                        <ul>
+                          <li class="mega-title"><a href="#">Accessories</a></li>
+                          <li><a href="#">Coming Soon</a></li>
+                          <li><a href="#">Coming Soon</a></li>
+                          <li><a href="#">Coming Soon</a></li>
+                          <li><a href="#">Coming Soon</a></li>
+                        </ul>
+                      </div>
                     </li>
                     <!--blog nav -->
-                    <li class="static"><a href="#">Blogs</a>
-                      <ul class="submenu">
-                        <li class="mega-title"><a href="#">Mega Title</a></li>
-                        <li><a href="#">Full width</a></li>
-                        <li><a href="#">Full width</a></li>
-                        <li><a href="#">Full width</a></li>
-                        <li><a href="#">Full width</a></li>
-
-                        <li class="mega-title"><a href="#">Mega Title</a>
-                          <ul class="submenu">
-                            <li><a href="#">Full width</a></li>
-                            <li><a href="#">Full width</a></li>
-                            <li><a href="#">Full width</a></li>
-                            <li><a href="#">Full width</a></li>
-                          </ul>
-                        </li>
-
-                        <li class="mega-title"><a href="#">Mega Title</a>
-                          <ul class="submenu">
-                            <li><a href="#">Full width</a></li>
-                            <li><a href="#">Full width</a></li>
-                            <li><a href="#">Full width</a></li>
-                            <li><a href="#">Full width</a></li>
-                          </ul>
-                        </li>
-
-                        <li class="mega-title"><a href="#">Mega Title</a>
-                          <ul class="submenu">
-                            <li><a href="#">Full width</a></li>
-                            <li><a href="#">Full width</a></li>
-                            <li><a href="#">Full width</a></li>
-                            <li><a href="#">Full width</a></li>
-                          </ul>
-                        </li>
-                      </ul>
-                    </li>
+                    <li class="static"><a href="blogs.html">Blogs</a></li>
                     <!-- about nav -->
-                    <li><a href="#">About Us</a></li>
+                    <li><a href="about.html">About Us</a></li>
                   </ul>
                 </li>
               </nav>
@@ -754,10 +702,10 @@
   <!-- Banner Area Start -->
   <div class="banner-area">
     <div class="container">
-      <div class="banner-img" style="background-image: url(img/banner.jpeg);">
-        <div class="banner-text">
-          <h2 class="banner-heading col-xl-6 col-lg-6 col-md-6 text-center"><strong>|</strong> Placement <strong>Title</strong></h2>
-          <h4 class="banner-para col-xl-6 col-lg-6 col-md-6 text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse tincidunt vive hendrerit.</h4>
+      <div class="banner-img">
+        <div class="slider-text mr-5">
+          <h2>We Have<span>Great Deals.</span></h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse tincidunt vive hendrerit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse tincidunt vive hendrerit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse tincidunt vive hendrerit.</p>
         </div>
       </div>
     </div>
@@ -1356,12 +1304,11 @@
               <div class="footer-menu">
                 <nav>
                   <ul>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">FAQS</a></li>
-                    <li><a href="#">Order</a></li>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Tracking</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="blogs.html">Blog</a></li>
+                    <li><a href="faq.html">FAQS</a></li>
+                    <li><a href="order.html">Order</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                   </ul>
                 </nav>
               </div>
